--- a/index.html
+++ b/index.html
@@ -1,30 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Index</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio - Home</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            line-height: 1.6;
+        }
+
+        /* Navigation Styles - Using div class="nav" as required */
+        .nav {
+            background-color: #2c3e50;
+            padding: 1rem 0;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        .nav-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 2rem;
+            flex-wrap: wrap;
+        }
+
+        .nav-logo {
+            color: #ecf0f1;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .nav-menu {
+            display: flex;
+            gap: 2rem;
+            list-style: none;
+            flex-wrap: wrap;
+        }
+
+        .nav-menu a {
+            color: #ecf0f1;
+            text-decoration: none;
+            font-size: 1rem;
+            padding: 0.5rem;
+            transition: color 0.3s;
+        }
+
+        .nav-menu a:hover,
+        .nav-menu a.active {
+            color: #3498db;
+        }
+
+        /* Hero Section */
+        .hero {
+            min-height: calc(100vh - 70px);
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 2rem;
+            color: white;
+            text-align: center;
+        }
+
+        .hero-content {
+            max-width: 800px;
+        }
+
+        .hero h1 {
+            font-size: clamp(2rem, 5vw, 4rem);
+            margin-bottom: 1rem;
+            font-weight: 700;
+        }
+
+        .hero-tagline {
+            font-size: clamp(1rem, 2vw, 1.5rem);
+            margin-bottom: 2rem;
+            font-weight: 300;
+        }
+
+        .hero-bio {
+            background-color: rgba(255,255,255,0.1);
+            backdrop-filter: blur(10px);
+            padding: 2rem;
+            border-radius: 15px;
+            margin-top: 2rem;
+        }
+
+        .hero-bio p {
+            font-size: 1.1rem;
+            line-height: 1.8;
+            margin-bottom: 1.5rem;
+        }
+
+        .hero-bio p:last-child {
+            margin-bottom: 0;
+        }
+
+        .cta-button {
+            margin-top: 2rem;
+            padding: 1rem 2rem;
+            font-size: 1.1rem;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 50px;
+            cursor: pointer;
+            text-decoration: none;
+            display: inline-block;
+            transition: transform 0.3s, box-shadow 0.3s;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+        }
+
+        .cta-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .nav-container {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            .nav-menu {
+                gap: 1rem;
+            }
+
+            .hero {
+                padding: 1rem;
+            }
+
+            .hero-bio {
+                padding: 1.5rem;
+            }
+        }
+    </style>
 </head>
 <body>
-<header>
-<nav>
-<h1>Index</h1>
-<div class="hamburger" onclick="toggleMenu()">☰</div>
-<ul id="menu">
-<li><a href="index.html">Home</a></li>
-<li><a href="project.html">Projects</a></li>
-<li><a href="contact.html">Contact</a></li>
-<li><a href="videoDemo.html">Video</a></li>
-<li><a href="sitereport.html">Site Report</a></li>
-</ul>
-</nav>
-</header>
-<main>
-<h2>Welcome</h2><p>This is my web development portfolio.</p>
-</main>
-<footer><p>© 2026 My Portfolio</p></footer>
-<script>
-function toggleMenu(){document.getElementById("menu").classList.toggle("show");}
-</script>
+    <!-- Navigation -->
+    <div class="nav">
+        <div class="nav-container">
+            <div class="nav-logo">My Portfolio</div>
+            <ul class="nav-menu">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="project.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="videoDemo.html">Video Demo</a></li>
+                <li><a href="siteReport.html">Report</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Welcome to My Portfolio</h1>
+            <p class="hero-tagline">Hi, I'm Rituraj Timalsina - Web Developer & Designer</p>
+            
+            <div class="hero-bio">
+                <p>
+                    I'm a passionate web developer currently studying CSY1063. I specialize in creating beautiful, 
+                    responsive websites that provide excellent user experiences. This portfolio showcases my journey 
+                    in web development and the projects I've worked on.
+                </p>
+                <p>
+                    I believe in clean code, thoughtful design, and continuous learning. Feel free to explore my 
+                    work and get in touch if you'd like to collaborate!
+                </p>
+            </div>
+            
+            <a href="project.html" class="cta-button">View My Projects</a>
+        </div>
+    </section>
 </body>
 </html>
