--- a/project.html
+++ b/project.html
@@ -1,30 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Project</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio - Projects</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            line-height: 1.6;
+            background-color: #ecf0f1;
+        }
+
+        /* Navigation Styles */
+        .nav {
+            background-color: #2c3e50;
+            padding: 1rem 0;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        .nav-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 2rem;
+            flex-wrap: wrap;
+        }
+
+        .nav-logo {
+            color: #ecf0f1;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .nav-menu {
+            display: flex;
+            gap: 2rem;
+            list-style: none;
+            flex-wrap: wrap;
+        }
+
+        .nav-menu a {
+            color: #ecf0f1;
+            text-decoration: none;
+            font-size: 1rem;
+            padding: 0.5rem;
+            transition: color 0.3s;
+        }
+
+        .nav-menu a:hover,
+        .nav-menu a.active {
+            color: #3498db;
+        }
+
+        /* Projects Section */
+        .projects-section {
+            padding: 3rem 2rem;
+            min-height: calc(100vh - 70px);
+        }
+
+        .projects-container {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .projects-header {
+            text-align: center;
+            margin-bottom: 3rem;
+        }
+
+        .projects-header h1 {
+            font-size: 2.5rem;
+            color: #2c3e50;
+            margin-bottom: 1rem;
+        }
+
+        .projects-header p {
+            font-size: 1.1rem;
+            color: #7f8c8d;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        /* Grid Layout - Different from other pages */
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+        }
+
+        .project-card {
+            background-color: white;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            transition: transform 0.3s, box-shadow 0.3s;
+            cursor: pointer;
+        }
+
+        .project-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 15px rgba(0,0,0,0.2);
+        }
+
+        .project-image {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            background-color: #34495e;
+        }
+
+        .project-content {
+            padding: 1.5rem;
+        }
+
+        .project-title {
+            font-size: 1.5rem;
+            color: #2c3e50;
+            margin-bottom: 0.5rem;
+        }
+
+        .project-description {
+            font-size: 1rem;
+            color: #7f8c8d;
+            line-height: 1.6;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .nav-container {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            .nav-menu {
+                gap: 1rem;
+            }
+
+            .projects-section {
+                padding: 2rem 1rem;
+            }
+
+            .projects-header h1 {
+                font-size: 2rem;
+            }
+
+            .projects-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
 </head>
 <body>
-<header>
-<nav>
-<h1>Project</h1>
-<div class="hamburger" onclick="toggleMenu()">☰</div>
-<ul id="menu">
-<li><a href="index.html">Home</a></li>
-<li><a href="project.html">Projects</a></li>
-<li><a href="contact.html">Contact</a></li>
-<li><a href="videoDemo.html">Video</a></li>
-<li><a href="sitereport.html">Site Report</a></li>
-</ul>
-</nav>
-</header>
-<main>
-<div class="project-grid"><img src="https://via.placeholder.com/300"><img src="https://via.placeholder.com/300"><img src="https://via.placeholder.com/300"></div>
-</main>
-<footer><p>© 2026 My Portfolio</p></footer>
-<script>
-function toggleMenu(){document.getElementById("menu").classList.toggle("show");}
-</script>
+    <!-- Navigation -->
+    <div class="nav">
+        <div class="nav-container">
+            <div class="nav-logo">My Portfolio</div>
+            <ul class="nav-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="project.html" class="active">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="videoDemo.html">Video Demo</a></li>
+                <li><a href="siteReport.html">Report</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Projects Section -->
+    <section class="projects-section">
+        <div class="projects-container">
+            <div class="projects-header">
+                <h1>My Projects</h1>
+                <p>Here are some of the projects I've worked on. Each project represents a unique challenge and learning opportunity.</p>
+            </div>
+
+            <div class="projects-grid">
+                <!-- Project 1 -->
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/400x300/3498db/ffffff?text=E-Commerce+Site" alt="Project 1" class="project-image">
+                    <div class="project-content">
+                        <h3 class="project-title">Project 1</h3>
+                        <p class="project-description">
+                            A fully responsive online shopping platform with product catalog, shopping cart, and checkout functionality.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Project 2 -->
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/400x300/e74c3c/ffffff?text=Weather+Dashboard" alt="Project 2" class="project-image">
+                    <div class="project-content">
+                        <h3 class="project-title">Project 2</h3>
+                        <p class="project-description">
+                            Interactive weather application displaying real-time weather data with beautiful visualizations and forecasts.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Project 3 -->
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/400x300/2ecc71/ffffff?text=Task+Manager" alt="Project 3" class="project-image">
+                    <div class="project-content">
+                        <h3 class="project-title">Project 3</h3>
+                        <p class="project-description">
+                            Productivity application for managing tasks and projects with drag-and-drop functionality and priority settings.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Project 4 -->
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/400x300/f39c12/ffffff?text=Portfolio+Template" alt="Project 4" class="project-image">
+                    <div class="project-content">
+                        <h3 class="project-title">Project 4</h3>
+                        <p class="project-description">
+                            Modern and clean portfolio website template for creative professionals and developers.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Project 5 -->
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/400x300/9b59b6/ffffff?text=Blog+Platform" alt="Project 5" class="project-image">
+                    <div class="project-content">
+                        <h3 class="project-title">Project 5</h3>
+                        <p class="project-description">
+                            Content management system for bloggers with article creation, editing, and commenting features.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Project 6 -->
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/400x300/1abc9c/ffffff?text=Recipe+Finder" alt="Project 6" class="project-image">
+                    <div class="project-content">
+                        <h3 class="project-title">Project 6</h3>
+                        <p class="project-description">
+                            Culinary application to search, save, and share recipes with ingredient lists and cooking instructions.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
